--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,522 @@
-body {
-  background-color: antiquewhite;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
+
+.container-main{
+  background-color:black;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px 30px;
+}
+
+.text{
+  font-size: 18px;
+}
+
+a{
+  display: inline;
+  justify-content: space-between;
+  text-decoration: none;
+  gap: 20px;
+  color: white;
+  font-size: 14px;
+  font-weight: 400;
+  padding-right: 5px;
+  cursor: pointer;
+}
+
+a:hover{
+  text-decoration: underline;
+  color: blue;
+}
+
+.title{
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 30px 30px;
+ 
+}
+h1{
+  font-size: 65px;
+}
+
+.title1{
+  color: #FFE074;
+  font-size: 12px;
+  padding-bottom: 15px;
+}
+
+.title2{
+  font-size: 16px;
+  padding-top: 15px;
+  padding-bottom: 100px;
+}
+
+body {
+  background-color:white;
+}
+
+.color{
+  color:#000000;
+  padding-top: 50px;
+  padding-right: -50px;
+  padding-bottom: 0;
+  padding-left: 50px;
+  font-family: 'Inter', sans-serif;
+  font-size: 16px;
+
+}
+
+.line{
+  color: #000000;
+  margin-left: 30px;
+  width: 100%;
+  display: block;
+ 
+}
+
+.button{
+  display: inline-block;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  border-style:solid ;
+}
+
+.button--1{
+  background-color: #18191F;
+  border:#18191F; 
+}
+
+.button--2{
+  background-color:  #474A57;
+  border: #474A57;
+}
+
+.button--3{
+  background-color:  #969BAB;
+  border:#969BAB;
+}
+
+.button--4{
+  background-color:  #D9DBE1;
+  border: #D9DBE1;
+}
+
+.button--5{
+  background-color:  #EEEFF4;
+  border: #EEEFF4;
+}
+
+.button--6{
+  background-color:  #F4F5F7;
+  border: #F4F5F7;
+}
+
+.container-grid{
+  display: grid;
+  grid-template-columns: 90px 90px 90px 90px auto;
+  grid-auto-rows:90px;
+  row-gap: 30px;
+  column-gap: 30px;
+  margin-left: 5px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.button--7{
+  background-color:#8C30F5;
+  grid-column: 1;
+  grid-row: 1/2;
+  border-color:#8C30F5;
+
+}
+.button--8{
+  background-color:#D6B1FF;
+  grid-column: 2;
+  grid-row: 1/2;
+  border-color:#D6B1FF;  
+}
+
+.button--9{
+  background-color:#F1E4FF;
+  grid-column: 3;
+  grid-row: 1/2;
+  border-color:#F1E4FF;
+}
+
+.button--19{
+  background-color:#72FFE6;
+  grid-column: 5;
+  grid-row: 1/5;
+  width: 730px;
+  height: 450px;
+  border-color:#72FFE6;
+}
+
+.button--10{
+  background-color:#2EC5CE;
+  grid-column: 1;
+  grid-row: 2/3;
+  border-color:#2EC5CE;
+}
+
+.button--11{
+  background-color:#75E3EA;
+  grid-column: 2;
+  grid-row: 2/3;
+  border-color:#75E3EA;
+}
+
+.button--12{
+  background-color:#D5FAFC;
+  grid-column: 3;
+  grid-row: 2/3;
+  border-color:#D5FAFC;
+}
+
+.button--13{
+  background-color:#FE9A22;
+  grid-column: 1;
+  grid-row: 3/4;
+  border-color:#FE9A22;
+}
+
+.button--14{
+  background-color:#FFC278;
+  grid-column: 2;
+  grid-row: 3/4;
+  border-color:#FFC278;
+}
+
+.button--15{
+  background-color:#FFE3C1;
+  grid-column: 3;
+  grid-row: 3/4;
+  border-color:#FFE3C1;
+}
+
+.button--16{
+  background-color:#F22BB2;
+  grid-column: 1;
+  grid-row: 4/5;
+  border-color:#F22BB2;
+}
+
+.button--17{
+  background-color:#FF72D2;
+  grid-column: 2;
+  grid-row: 4/5;
+  border-color:#FF72D2;
+}
+
+.button--18{
+  background-color:#FFB1E6;
+  grid-column: 3;
+  grid-row: 4/5;
+  border-color:#FFB1E6;
+}
+
+.container-line2{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.btn21{
+  display: inline-block;
+  background-color: #C1E5C0;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  border-color:#C1E5C0;
+  border-style:solid ;
+  border-width: 1px; 
+}
+
+.btn22{
+  display: inline-block;
+  background-color: #C0DAE5;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-color:#C0DAE5;
+  border-style:solid ;
+  border-width: 1px; 
+}
+
+.btn23{
+  display: inline-block;
+  background-color: #F39F9F;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-color:#F39F9F;
+  border-style:solid ;
+  border-width: 1px;
+}
+
+.btn24{
+  display: inline-block;
+  background-color: #FDD9D9;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-color:#FDD9D9;
+  border-style:solid ;
+  border-width: 1px;  
+}
+
+.btn25{
+  display: inline-block;
+  background-color: #FFC3D8;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-color:#FFC3D8;
+  border-style:solid ;
+  border-width: 1px;  
+}
+
+.btn26{
+  display: inline-block;
+  background-color:#A0DCFF;
+  border-radius: 12px;
+  width: 90px;
+  height: 90px;
+  margin-top: 30px;
+  margin-left: 20px;
+  margin-bottom: 30px;
+  border-color:#A0DCFF;
+  border-style:solid ;
+  border-width: 1px;  
+}
+
+h6{
+  color: #18191F;
+  font-family: 'Inter', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  margin-top: 100px;
+  margin-left: 100px;
+  margin-bottom: 30px;
+
+}
+
+.container-pictures{
+  display: grid;
+  grid-template-columns: 350px 350px 350px;
+  grid-auto-rows:350px;
+  row-gap: 10px;
+  column-gap: 10px;
+  margin-left: 100px;
+  margin-right: 100px;
+  margin-bottom: 30px;
+}
+
+.btn-sub{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 30px;
+  font-size: 14px;
+  font-family: 'Lato', sans-serif;
+  margin-top: 30px;
+  margin-right: 50px;
+  margin-bottom: 30px;
+  
+}
+
+.btn-sub1{
+  background-color: #2196F3;
+  border-color: #2196F3;
+  color: white;
+  padding: 11px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 2s, border-color 2s;
+}
+.btn-sub1:hover{
+  background-color: #0069C0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  border-color: #5C6BC0;
+}
+
+.btn-sub1:active{
+  background-color: #0069C0;
+  box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.25);
+  border-color:rgba(0, 0, 0, 0.25)
+}
+
+.btn-sub2{
+  background-color: white;
+  border-color:#5C6BC0;
+  color:  #5C6BC0;
+  padding: 11px 20px;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 2s, border-color 2s;
+}
+
+.btn-sub2:hover{
+  background-color:#5C6BC0; 
+  border-color: #5C6BC0;
+  color: white;
+}
+
+.btn-sub2:active{
+  background-color:#5C6BC0; 
+  border-color:rgba(0, 0, 0, 0.25);
+  color: white;
+}
+
+.btn-sub3{
+  background-color: white;
+  color:  #2196F3;
+  padding: 11px 20px;
+  border-radius: 3px;
+  transition: background-color 2s;
+  cursor: pointer;
+  border-color: transparent;
+}
+
+.btn-sub3:hover{
+  background-color:white;
+  border-color: rgba(0, 0, 0, 0.25);
+  box-shadow: rgba(0, 0, 0, 0.25);
+  color: #2196F3;
+}
+
+.btn-sub3:active{
+  background-color:white;
+  border-color: rgba(0, 0, 0, 0.25);
+  box-shadow: inset rgba(0, 0, 0, 0.25);
+  color: #2196F3;
+}
+
+.container-card{
+  display: grid;
+  grid-template-columns: 1fr 400px 1fr;
+  grid-auto-rows: 440px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  
+}
+.card{
+  grid-column: 2;
+  grid-row: 1/2;
+  padding: 40px;
+  border-color: #E3E4EB;
+  border-radius: 16px;
+  border-style:solid ;
+  border-width: 1px;
+  
+}
+
+h3{
+  font-family: 'Inter', sans-serif;
+  font-style: bold;
+  font-size: 24px;
+  text-align: center;
+  padding-top: 40px;
+}
+
+h2{
+  font-family: 'Inter', sans-serif;
+  font-style: 400;
+  font-size: 54px;
+  text-align: center;
+  gap: 15px;
+}
+
+.list{
+  font-family: 'Inter', sans-serif;
+  font-style: 400;
+  font-size: 16px;
+  line-height: 2;
+  color:#555770;
+  padding-top: 30px;
+  padding-left: 60px;
+}
+
+.but-subscription{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
+  font-size: 14px;
+
+}
+
+.subsr{
+  color:#FFFFFF;
+  background-color:  #3366FF;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 2s, border-color 2s;
+  border: none;
+  padding: 8px 24px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.subsr:hover{
+  background-color: #E5E5E5;
+}
+
+.subsr:active{
+  background-color: #E5E5E5;
+}
+
+  
+
+.footer{
+  background-color:black;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 34px 30px;
+}
+
+
+
+
